# CineReserve-API

./: .env.example  .gitignore  README.md  pyproject.toml
.postman/: resources.yaml
api/: admin.py  apps.py  models.py  signals.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_seat_room.py  0003_reservation_sessionseat.py  0004_alter_sessionseat_session.py  0005_alter_sessionseat_unique_together_and_more.py  0006_remove_reservation_session.py
api/models/: __init__.py  movie.py  reservation.py  room.py  seat.py  session.py  sessionseat.py  user.py
api/serializers/: __init__.py  auth.py  movie.py  reservation.py  session.py  session_seat.py  user.py
api/views/: __init__.py  auth.py  movie.py  reservation.py  session.py  user.py
config/: settings.py
