[project]
name = "cinereserve-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel William",email = "116318328+miguelwilliam@users.noreply.github.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "environs (>=14.6.0,<15.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
